tests/snapshots/errors__errors_coffee@component_on_impl.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: expected `trait`
  --> examples/component_on_impl.rs:45:1
   |
45 | impl<H: Heater, P: Pump> CoffeeShop<H, P> {
   | ^^^^
   |
   = help: `#[component(...)]` is expected to be placed on a trait

error[E0412]: cannot find type `DirkCoffeeShop` in this scope
  --> examples/component_on_impl.rs:20:24
   |
20 |     let coffee_shop = <DirkCoffeeShop as dirk::DirkComponent<_>>::builder().build();
   |                        ^^^^^^^^^^^^^^ help: a struct with a similar name exists: `CoffeeShop`
...
31 | struct CoffeeShop<H: Heater, P: Pump> {
   | ------------------------------------- similarly named struct `CoffeeShop` defined here

For more information about this error, try `rustc --explain E0412`.
error: could not compile `coffee` (example "component_on_impl") due to 2 previous errors
